# fuck-venmo

./: .gitignore  Dockerfile  README.md  fuck_venmo.bash  make_ticket.py  pyproject.toml
fuck_venmo/: __main__.py  airvpn.py  debug.py  fastmail.py  state.py  ticket.py  util.py  venmo.py
